--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@solana/web3.js": "^1.95.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "ethers": "^6.13.4",
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
     "radix-ui": "^1.0.1",
