--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "ethers": "^6.13.4",
+    "framer-motion": "^11.11.10",
     "lucide-react": "^0.453.0",
     "next": "14.2.15",
     "radix-ui": "^1.0.1",
